alignment fixed

--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@
 
 .planning {
     display: flex;
-    text-align: center;
+    justify-content: space-evenly;
+
 }
 
 .card {
